--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,4 +52,10 @@ dependencies {
 
     implementation 'com.google.zxing:core:3.4.1'
     implementation 'com.journeyapps:zxing-android-embedded:4.2.0'
+
+    // Добавьте зависимость для работы с геолокацией
+    implementation 'com.google.android.gms:play-services-location:17.0.0'
+
+    // Добавьте зависимость для работы с JSON
+    implementation 'com.google.code.gson:gson:2.8.8'
 }
